[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
build       = "build.rs"
description = "A fast, safe, tiny Ethereum/ECDSA key generator."
edition     = "2021"
homepage    = "https://eth-key.hack.ink"
license     = "GPL-3.0"
name        = "eth-key"
readme      = "README.md"
repository  = "https://github.com/hack-ink/eth-key"
version     = "0.1.0"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen = { version = "8.3", features = ["build", "cargo", "git", "gitcl"] }

[dependencies]
anyhow      = { version = "1.0" }
array-bytes = { version = "6.2" }
# bip39       = { version = "1.0", features = ["rand"] }
rand        = { version = "0.8", features = ["std_rng"] }
secp256k1   = { version = "0.28", features = ["rand"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
